edit pairing with Max 14

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -73,7 +73,7 @@ when you debug a release:
 * **Job VMs** are newly created in two cases: the first time you deploy a release,
 and every time that you deploy using the `--recreate` option.
 
-### <a id="what"></a> Decide What to Release ###
+### <a id="what"></a> Decide what to release ###
 
 A BOSH release contains one or more pieces of software that work together.
 For example, you could create a BOSH release of a service with three pieces:
