--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -75,7 +75,7 @@ jobs:
 
 Parts of any given BOSH manifest are IaaS-specific.
 Most manifest content, though, is independent of the cloud infrastructure where you want to deploy.
-This allows you to re-use manifests with minimal changes, even you re-deploy on a different IaaS.
+This allows you to re-use manifests with minimal changes, even if you re-deploy on a different IaaS.
 
 You begin the BOSH deployment manifest with three dashes, followed by the name you give the deployment,
 then a `director_uuid` that ensures that you deploy with the correct BOSH.
