--- a/create-release-summary.html.md.erb
+++ b/create-release-summary.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Creating a BOSH Release — Step-by-step Summary
+title: Creating a BOSH Release — Step-by-Step Summary
 ---
 
 _This topic assumes that you have read [Creating a BOSH Release](./create-release.html)._
@@ -33,27 +33,27 @@ Choose to work one section at a time or one job at a time.
 ## <a id="sum-job-skel"></a> Step 1: Create Job Skeletons ##
 
 
-### <a id="sum-init-job"></a> 1. Initialize job skeletons ###
+### <a id="sum-init-job"></a>Initialize job skeletons ###
 
 For each job, run:
     `bosh generate job <job_name>`
 
-### <a id="sum-control-scripts"></a> 2. Create control scripts ###
+### <a id="sum-control-scripts"></a>Create control scripts ###
 
 For each job, create a control script in the form of an ERb template and save it in the templates directory for the job.
 
-### <a id="sum-monit"></a> 3. Update monit files ###
+### <a id="sum-monit"></a>Update monit files ###
 
 For each job, update the `monit` file to reference each command provided by the templates for the job, and to match the example.
 
-### <a id="sum-job-specs"></a> 4. Update job specs ###
+### <a id="sum-job-specs"></a>Update job specs ###
 
 For each job, update the `templates` block of the `spec` file to reference each template and specify a path in
 accordance with the convention `ctl.erb: bin/ctl`.
 
-### <a id="sum-commit-1"></a> 5. Commit ###
+### <a id="sum-commit-1"></a>Commit ###
 
-## <a id="sum-graphs"> Step 2: Make Dependency Graphs ##
+## <a id="sum-graphs"> </a>Step 2: Make Dependency Graphs ##
 
 Record compile-time and runtime dependencies in your graph, to match the example.
 
@@ -61,34 +61,34 @@ Record compile-time and runtime dependencies in your graph, to match the example
 
 ## <a id="sum-pkg-skel"></a> Step 3: Create Package Skeletons ##
 
-### <a id="sum-pkg-skel-init"></a> 1. Initialize Package Skeletons
+### <a id="sum-pkg-skel-init"></a>Initialize Package Skeletons
 
 Create packages starting from the bottom of your dependency graph.
 
     `bosh generate package <dependency_name>`
 
-### <a id="sum-pkg-spec"></a> 2. Update packaging specs ###
+### <a id="sum-pkg-spec"></a>Update packaging specs ###
 
 For each package, update the `files` block of the spec to cite the files on which the package depends.
 
-### <a id="sum-create-pkging-scripts"></a> 3. Create packaging scripts ###
+### <a id="sum-create-pkging-scripts"></a>Create packaging scripts ###
 
 For each package, create a script which renders the source files referenced in the package specs
 into executable binaries and scripts.
 Scripts should start with `set -e -x`, and must deliver resulting code to the `BOSH_INSTALL_TARGET` directory.
 
-### <a id="sum-update-job-specs"></a> 4. Update job specs with dependencies ###
+### <a id="sum-update-job-specs"></a>Update job specs with dependencies ###
 
 For each job, add runtime dependencies to the `packages` block of the job spec.
 
 ## <a id="sum-blobs"></a>Step 4: Add Blobs ##
 
-### <a id="sum-blobstore"></a> 1. Configure a blobstore ###
+### <a id="sum-blobstore"></a>Configure a blobstore ###
 
 In the config directory, name the blobstore and declare its type in the
 `final.yml` file, and specify the blobstore path and a secret in the `private.yml` file.
 
-### <a id="sum-inform"></a> 2. Inform BOSH where blobs are ###
+### <a id="sum-inform"></a>Inform BOSH where blobs are ###
 
 For each blob, run:
 
@@ -102,13 +102,13 @@ Specify the property in the deployment manifest.
 
 ## <a id="sum-dev-release"></a> Step 6: Do a Dev Release ##
 
-### <a id="sum-create-dev-release"></a> 1. Create the Dev release ###
+### <a id="sum-create-dev-release"></a>Create the Dev release ###
 
     `bosh create release --force`
 
 BOSH prompts for a release name, and assigns a dot-number version to the release.
 
-### <a id="sum-deploy-dev-release"></a> 2. Deploy the Dev Release ###
+### <a id="sum-deploy-dev-release"></a>Deploy the Dev Release ###
 
 See what director BOSH is targeting:
 
@@ -132,7 +132,7 @@ Deploy:
 
     `bosh deploy`
 
-### <a id="sum-test-dev-release"></a>3. Test the Dev Release ###
+### <a id="sum-test-dev-release"></a>Test the Dev Release ###
 
 If your release fails tests, follow this pattern.
 
@@ -142,26 +142,26 @@ If your release fails tests, follow this pattern.
 
 ## <a id="sum-final-release"></a>Do a Final Release ##
 
-### <a id="sum-upload-blobs"></a> 1. Upload blobs ###
+### <a id="sum-upload-blobs"></a> Upload blobs ###
 
 Run `bosh blobs` and confirm that the list contains only those blobs needed for
 the final release.
 
 Run `bosh upload blobs` to upload blobs to the public blobstore you configured earlier.
 
-### <a id="sum-commit"></a> 2. Commit ###
+### <a id="sum-commit"></a> Commit ###
 
 Commit and push your code to a shared repository to give others access to your final release.
 
-### <a id="sum-final-release"></a>  3. Release ###
+### <a id="sum-final-release"></a> Release ###
 
 Run `bosh release --final`
 
 BOSH prompts for a release name, and assigns a whole-number version to the release.
 
-### <a id="sum-commit-"></a>  4. Commit ###
+### <a id="sum-commit-"></a>Commit ###
 
-### <a id="sum-final-deploy"></a> 5. Deploy the Final Release ###
+### <a id="sum-final-deploy"></a> Deploy the Final Release ###
 
 Run `bosh deploy`.
 
