edit pairing with Max, tweak summary topic again

--- a/create-release-summary.html.md.erb
+++ b/create-release-summary.html.md.erb
@@ -57,7 +57,7 @@ accordance with the convention `ctl.erb: bin/ctl`.
 
 Record compile-time and runtime dependencies in your graph, to match the example.
 
-    <%= image_tag("dep-graph.png") %>
+  <%= image_tag("dep-graph.png") %>
 
 ## <a id="sum-pkg-skel"></a> Step 3: Create Package Skeletons ##
 
@@ -149,7 +149,7 @@ the final release.
 
 Run `bosh upload blobs` to upload blobs to the public blobstore you configured earlier.
 
-### <a id="sum-commit"></a> Commit ###
+### <a id="sum-commit-2"></a> Commit ###
 
 Commit and push your code to a shared repository to give others access to your final release.
 
@@ -159,7 +159,7 @@ Run `bosh release --final`
 
 BOSH prompts for a release name, and assigns a whole-number version to the release.
 
-### <a id="sum-commit-"></a>Commit ###
+### <a id="sum-commit-3"></a>Commit ###
 
 ### <a id="sum-final-deploy"></a> Deploy the Final Release ###
 
