--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -36,10 +36,9 @@ completing the material in this section), then iterate through
 the material about dev releases (Steps 1 through 6) as many times as necessary
 before proceeding to do a final release.
 
-The main body of this tutorial contains both explanations and actions.
-At the end, there is a [Summary](#summary) which omits the explanations.
-Be sure you understand all the material in the tutorial before you try to
-create a release using the Summary.
+This tutorial contains both explanations and actions.
+The [Summary](./create-release-summary.html) omits the explanations and should
+only be used once you thoroughly grasp the material in this tutorial.
 
 <!--- You can use the example code to replicate the release we describe in the tutorial. -->
 
@@ -935,7 +934,7 @@ To upload your blobs, run:
 
   `bosh upload blobs`
 
-### <a id="final-commit"></a> Commit ###
+### <a id="final-commit-two"></a> Commit ###
 
 The `bosh upload blobs` command has now populated the `blobs.yml` file
 in the `config` directory with metadata for uploaded blobs.
