edit pairing with Max, add intro sentence to prep section of summary topic

--- a/create-release-summary.html.md.erb
+++ b/create-release-summary.html.md.erb
@@ -10,7 +10,10 @@ The workflow for creating BOSH releases is iterative, and looks like this:
 
 ## <a id="sum-prep"></a> Preparation ##
 
-Placeholder sentence, only need to do prep once, iterate the rest until final release.
+The instructions in this section only need to be done once.
+After that you create a dev release (Steps 1 through 6),
+and iterate through those steps until you are ready to do
+a final release.
 
 ### <a id="sum-init"></a> Create the release directory ###
 
@@ -31,7 +34,6 @@ to link your source code to the directory.
 Choose to work one section at a time or one job at a time.
 
 ## <a id="sum-job-skel"></a> Step 1: Create Job Skeletons ##
-
 
 ### <a id="sum-init-job"></a>Initialize job skeletons ###
 
