fix header problem with placeholder

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -19,6 +19,11 @@ a web UI and a background worker.
 The two jobs split up the functionality provided by single Ruby app,
 `ardo_app`.
 
+
+## <a id="prep"></a>Preparation ##
+
+Placeholder phrase.
+
 ### <a id="release-dir"></a>Create the release directory ###
 
 All parts of a release reside in the _release directory_.
