remove more extraneous

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -22,7 +22,10 @@ The two jobs split up the functionality provided by single Ruby app,
 
 ## <a id="prep"></a>Preparation ##
 
-Placeholder phrase.
+This section needs to be completed once.
+Next, you iterate through Steps 1 through 6 until your dev release is
+satisfactory.
+Then you do a final release.
 
 ### <a id="release-dir"></a>Create the release directory ###
 
