--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -52,7 +52,7 @@ How to deploy and operate a BOSH-based environment.
 
 Knowledge and skills for developers and other experts.
 
-* [How BOSH Works](how-bosh-works.html)
+* [BOSH Components](bosh-components.html)
 * [Creating a BOSH Release](create-release.html)
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
 * [Creating a BOSH Deployment Manifest](create-manifest.html)
